# py_reolinkrestapi

./: .gitignore  README.md  _tests.env.example  pyproject.toml  requirements_dev.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
src/async_reolink/rest/: __init__.py  __version__.py  client.py  command_factory.py  connection.py  const.py  errors.py  model.py  models.py  record.py  security.py  typing.py  typings.py
src/async_reolink/rest/_utilities/: copy.py  descriptors.py  dict.py  dictlist.py  enum.py  json.py  key_value.py  keyedproperty.py  lazy.py  missing.py  repr.py  typeguards.py
src/async_reolink/rest/ai/: __init__.py  command.py  mixin.py  model.py  models.py  typing.py  typings.py
src/async_reolink/rest/alarm/: __init__.py  command.py  mixin.py
src/async_reolink/rest/backports/: __init__.py  strenum.py
src/async_reolink/rest/commands/: __init__.py  ai.py  alarm.py  encoding.py  led.py  network.py  ptz.py  record.py  security.py  system.py
src/async_reolink/rest/connection/: mixin.py  (+4 more)
src/reolinkrestapi/: __init__.py  connection.py  record.py  security.py  seed.py
src/reolinkrestapi/helpers/: __init__.py  record.py
src/reolinkrestapi/parts/: __init__.py  connection.py  encrypt.py  record.py  security.py
tests/: __init__.py  common.py  models.py  test_client.py  test_commands.py  test_encrypt.py  test_integration.py  test_issues.py  test_led.py  test_manual.py  test_network.py  test_network.py.old.txt  test_security.py  test_security.py.old.txt  test_system.py  test_system.py.old.txt
tools/: get_abilities.py
(+54 files in other folders)
