[metadata]
name = reolinkrestapi
version = file: VERSION
description = Reolink camera rest api for python
long_description = file: README.md
keywords = Reolink
license = MIT
classifiers =
    Development Status :: 5 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires = 
    aiohttp
    reolinkapi==0.5.1

[options.packages.find]
where=src


[tool:pytest]
env_files =
    .env
    .tests.env