[metadata]
name = async_reolink.rest
version = attr: async_reolink.rest.__version__.__version__
description = Async ReoLink camera REST API for python
long_description = file: README.md
keywords = ReoLink, async, rest, api
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
project_urls =
    source=https://github.com/xannor/py_reolinkrestapi
    tracker=https://github.com/xannor/py_reolinkrestapi/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find_namespace:
install_requires =
    aiohttp
    async-reolink.api==0.5.7

[options.packages.find]
where=src


[tool:pytest]
env_files =
    .env
    .tests.env